--- a/updates/2025-01-26.md
+++ b/updates/2025-01-26.md
@@ -10,6 +10,14 @@
 | ------- | ----------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------- |
 | Open R1 | HuggingFace开源项目，目的是构建DeepSeek R1 pipeline中确实的部分，一遍所有人都能在此之上复制和构建R1。 | DeepSeek-R1持续刷屏，连Open R1都来了！抱抱脸发起，1天狂揽1.9k星 https://mp.weixin.qq.com/s/BX2iTak6bPAKdj6Lv1Lt3A |
 
+https://github.com/huggingface/open-r1
+
+研究团队以DeepSeek-R1技术报告为指导，将整个复刻过程划分为三个关键步骤。
+
+- **步骤 1：**通过从DeepSeek-R1蒸馏高质量语料库，复现R1-Distill模型。
+- **步骤 2：**复现DeepSeek用于创建R1-Zero的纯强化学习（RL）流程。这可能需要为数学、推理和代码任务策划新的大规模数据集。
+- **步骤 3：**展示我们如何通过多阶段训练，从基础模型发展到经过RL调优的模型。
+
 ## 2. Arxiv
 
 只显示1.24周五的相关工作
