--- a/updates/2025-01-28.md
+++ b/updates/2025-01-28.md
@@ -22,7 +22,7 @@
 
    1. 在上下文长度高达 100万Tokens的 “大海捞针” 式任务 ——Passkey Retrieval（密钥检索）中，Qwen2.5-1M系列模型展现出卓越性能，能够精准地从长度为1M的文档里检索出隐藏信息。
    2. 对于更复杂的长上下文理解任务，研究团队选择了RULER、LV-Eval和LongbenchChat等测试集。
-   3. ![image-20250128094942050](/Users/djh/Documents/GitHub/LLM-DailyDigest/updates/picture/image-20250128094942050.png)
+   3. ![image-20250128094942050](./picture/image-20250128094942050.png)
    4. 实习细节：
 
       1. 使用Adjusted Base Frequency的方案，将RoPE基础频率从10,000提高到10,000,000
