--- a/topic/智能体.md
+++ b/topic/智能体.md
@@ -1,5 +1,14 @@
 # 智能体
 
+## 洞察
+
+* 智能体
+  1. **自主决策、执行、洞察、反哺**
+  2. **具备任务自主化能力，能够主动拆解目标、智能调度资源，并在交互过程中持续优化策略，展现出强大的动态进化能力。**
+* 区别推理和规划能力
+* 递归自我改进（RSI）
+
+
 > [2025年agent前沿研究](https://deepshare.feishu.cn/wiki/Cu5Bw0k4WijJu9keRsIceDOZnpe?from=from_copylink)
 
 2025-07-18 14:05:54 Friday ｜ 模仿学习新范式，Chain-of-Action：轨迹自回归实现动作推理 https://mp.weixin.qq.com/s/fJXWvpC1s_2FkoUYhnmTCg
