--- a/updates/2025-08-06.md
+++ b/updates/2025-08-06.md
@@ -3687,6 +3687,20 @@ Video generation has made significant strides with the development of diffusion 
 
 # 1.3 Huggingface
 
+* [Qwen-Image技术报告（83▲） ](https://huggingface.co/papers/2508.02324?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-05)
+* [SitEmb-v1.5：改进的上下文感知密集检索，用于语义关联和长故事理解（39▲） ](https://huggingface.co/papers/2508.01959?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-05)
+* [CellForge：虚拟细胞模型的真实设计（29▲） ](https://huggingface.co/papers/2508.02276?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-05)
+* [超越权衡：推理模型指令跟随的自监督强化学习（24▲） ](https://huggingface.co/papers/2508.02150?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-05)
+* [Llama-3.1-FoundationAI-SecurityLLM-8B-Instruct技术报告（21▲） ](https://huggingface.co/papers/2508.01059?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-05)
+* [InstructVLA：视觉-语言-动作指令从理解到操作（8▲） ](https://huggingface.co/papers/2507.17520?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-05)
+* [适应度对齐结构建模支持AuroBind可扩展的虚拟筛选（8▲） ](https://huggingface.co/papers/2508.02137?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-05)
+* [VeOmni：使用以模型为中心的分布式配方动物园扩展任意模态模型训练（8▲） ](https://huggingface.co/papers/2508.02317?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-05)
+* [Voxlect：全球方言和区域语言建模的语音基础模型基准（6▲） ](https://huggingface.co/papers/2508.01691?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-05)
+* [文本到图像扩散模型的个性化安全对齐（6▲） ](https://huggingface.co/papers/2508.01151?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-05)
+* [稀疏- dllm：带动态缓存清除的加速扩散llm（5▲） ](https://huggingface.co/papers/2508.02558?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-05)
+* [压缩的一瞥：大型视觉语言模型的动态视觉标记修剪（5▲） ](https://huggingface.co/papers/2508.01548?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-05)
+* [还有12篇论文](https://huggingface.co/papers?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-05)
+
 # 1.4 X
 
 # 1.5 小红书
