--- a/content/resources/开源框架.md
+++ b/content/resources/开源框架.md
@@ -20,6 +20,41 @@ toc = true
 
 课程主页：https://stanford-cs336.github.io/spring2025/
 
+
+#### LLM 主流架构
+
+1. [硬核拆解大模型，从 DeepSeek-V3 到 Kimi K2 ，一文看懂 LLM 主流架构](https://mp.weixin.qq.com/s/_as8aCv325cAeJ6kMv9_aA)
+
+   1. 尽管模型能力不断提升，但其整体架构在这七年中保持了高度一致。当然，细节上仍有不少演进。例如，位置编码从最初的绝对位置（Absolute Positional Encoding）发展为旋转位置编码（RoPE）；注意力机制也从标准的多头注意力（Multi-Head Attention）逐步过渡为更高效的分组查询注意力（Grouped-Query Attention）；而激活函数方面，则从 GELU 被更高效的 SwiGLU 所取代。
+   2. DeepSeek V3
+
+      1. 论文标题：DeepSeek-V3 Technical Report
+      2. 论文链接：https://arxiv.org/abs/2412.19437
+      3. 多头潜在注意力机制 (MLA):通过让多个 query 头共享一组 key 和 value，从而减少 key 和 value 的总数。
+      4. Mixture-of-Experts (MoE):将 Transformer 中的每个前馈模块（FeedForward）替换为多个「专家层」（每个专家层本质上也是一个前馈网络）。
+         1. 论文标题：DeepSeekMoE: Towards Ultimate Expert Specialization in Mixture-of-Experts Language Models 论文链接：https://arxiv.org/abs/2401.06066
+   3. Allen Institute for AI 发布的 OLMo 系列模型
+
+      1. 论文标题：2 OLMo 2 Furious
+      2. 论文链接：https://arxiv.org/abs/2501.00656
+      3. 归一化层位置选择
+      4. QK-Norm:本质上是另一个 RMSNorm 层，它被放置在 多头注意力模块内部，在应用旋转位置编码（RoPE）之前，对 Query 和 Key 进行归一化处理。
+
+         1. 论文标题：Scaling Vision Transformers 论文链接：https://arxiv.org/abs/2106.04560
+   4. 谷歌的 Gemma
+
+      1. 滑动窗口注意力（sliding window attention）。
+      2. 论文标题：Gemma 3 Technical Report
+      3. 论文链接：https://arxiv.org/abs/2503.19786
+   5. Mistral Small 3.1
+   6. Llama 4
+   7. Qwen3
+   8. SmolLM3
+
+      1. 论文标题：The Impact of Positional Encoding on Length Generalization in Transformers
+      2. 论文链接：https://arxiv.org/abs/2305.19466
+   9. Kimi K2
+
 ## 预训练
 
 ## 微调
