--- a/content/updates/2025-08-09to12.md
+++ b/content/updates/2025-08-09to12.md
@@ -6882,6 +6882,34 @@ We are surrounded by robots helping us perform complex tasks. Robots have a wide
 
 # 1.3 Huggingface
 
+* [GLM-4.5：代理、推理和编码（ARC）基础模型（74▲） ](https://huggingface.co/papers/2508.06471?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-11)
+* [Voost：一种用于双向虚拟开机和关机的统一可扩展扩散变压器（31▲） ](https://huggingface.co/papers/2508.04825?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-11)
+* [InfiGUI-G1：自适应探索策略优化推进GUI接地（17▲） ](https://huggingface.co/papers/2508.05731?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-11)
+* [Memp：探索代理程序记忆（16▲） ](https://huggingface.co/papers/2508.06433?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-11)
+* [修剪不令人惊讶的：通过第一令牌惊讶进行有效的代码推理（10▲） ](https://huggingface.co/papers/2508.05988?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-11)
+* [GENIE：神经辐射场交互编辑的高斯编码（6▲） ](https://huggingface.co/papers/2508.02831?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-11)
+* [适应无标签的视觉语言模型：综述（5▲） ](https://huggingface.co/papers/2508.05547?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-11)
+* [MELLA：低资源语言mlms的语言能力和文化基础的桥梁（4▲） ](https://huggingface.co/papers/2508.05502?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-11)
+* [变压器训练中大规模激活的隐藏动力学（3▲） ](https://huggingface.co/papers/2508.03616?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-11)
+* [MeshLLM：授权大型语言模型逐步理解和生成3D网格（3▲） ](https://huggingface.co/papers/2508.01242?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-11)
+* [操作系统代理：基于mlm的通用计算设备代理研究（2▲） ](https://huggingface.co/papers/2508.04482?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-11)
+* [VLM4D：面向视觉语言模型的时空感知（1▲）](https://huggingface.co/papers/2508.02095?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-11)
+* 
+
+* [基于奖励矫正的强化学习视角的SFT泛化研究（77▲） ](https://huggingface.co/papers/2508.05629?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-08)
+* [R-Zero：零数据自进化推理LLM（63▲） ](https://huggingface.co/papers/2508.05004?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-08)
+* [Genie Envisioner：统一的世界基金会机器人操作平台（54▲） ](https://huggingface.co/papers/2508.05635?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-08)
+* [DeepPHY：在物理推理上对代理vlm进行基准测试（51▲） ](https://huggingface.co/papers/2508.05405?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-08)
+* [Hi3DEval：基于层次有效性的三维生成评估（21▲） ](https://huggingface.co/papers/2508.05609?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-08)
+* [我们是否走在评估文档检索增强生成的正确道路上？ (▲)14日 ](https://huggingface.co/papers/2508.03644?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-08)
+* [今天的法学硕士准备好解释幸福的概念了吗？ (8)▲](https://huggingface.co/papers/2508.03990?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-08)
+* [大型多模态模型能主动识别错误输入吗？ 学生输入审查能力的系统评价框架（7▲） ](https://huggingface.co/papers/2508.04017?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-08)
+* [Marco-Voice技术报告（6▲） ](https://huggingface.co/papers/2508.02038?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-08)
+* [act -1：以编码为动作的计算机使用代理（5▲） ](https://huggingface.co/papers/2508.03923?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-08)
+* [客户支持对话的评估、综合和增强（5▲） ](https://huggingface.co/papers/2508.04423?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-08)
+* [不要想太多：高效r1型大型推理模型调查（5▲） ](https://huggingface.co/papers/2508.02120?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-08)
+* [还有14篇论文](https://huggingface.co/papers?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-08-08)
+
 # 1.4 X
 
 # 1.5 小红书
