--- a/content/topic/评估.md
+++ b/content/topic/评估.md
@@ -174,6 +174,7 @@ MMMG: A Massive, Multidisciplinary, Multi-Tier Generation Benchmark for  Text-to
 4. 这一大类问题的可解性由 Courcelle 提出的一个算法元定理所保证
 5. 问题陈述看似简单，但这背后实则掩盖了发现正确动态规划解法的非凡难度。这个过程遍布着微妙的组合与逻辑陷阱，要求（研究者）对问题的底层结构有深刻的理解。关于解决一个名为 Maximal-Cluster-Graph 的难题所需的十五个相互依赖的推理步骤，其详细的推演过程请参阅论文的附录。
 6. 论文地址：https://arxiv.org/pdf/2507.13337
+7. AAI 的核心目标是推动「人工专家智能」（Artificial Expert Intelligence，AEI）的理论与应用，提出区别于传统窄域 AI 和 AGI 的新 AI 发展路径。这种 AEI 强调将领域知识与严密的科学推理能力相结合，旨在突破「只擅长特定任务」或「泛化无精度」的传统瓶颈，使 AI 可以像顶级人类专家一样，运用严谨推理来解决复杂科学或工程难题。
 
 ## 自动化评估
 
