--- a/content/topic/推理.md
+++ b/content/topic/推理.md
@@ -10,7 +10,7 @@ toc = true
 ## 综述
 
 1. [清华、上海AI Lab等顶级团队发布推理模型RL超全综述，探索通往超级智能之路](https://mp.weixin.qq.com/s/CkKlHplf-kO30L6B_ucv1g) 2025-09
-1. [大型推理模型的强化学习研究综述（95▲） ](https://huggingface.co/papers/2509.08827?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-09-11)
+2. [大型推理模型的强化学习研究综述（95▲） ](https://huggingface.co/papers/2509.08827?utm_source=digest-papers&utm_medium=email&utm_campaign=2025-09-11)
 
 ## 一般推理
 
@@ -210,7 +210,7 @@ https://arxiv.org/abs/2506.08388
 
 #### 形式化推理
 
-##### [#18](https://arxiv.org/abs/2509.09810) [Towards a Common Framework for Autoformalization](https://papers.cool/arxiv/2509.09810)  #18 朝向自动形式化的通用框架 
+##### [#18](https://arxiv.org/abs/2509.09810) [Towards a Common Framework for Autoformalization](https://papers.cool/arxiv/2509.09810)  #18 朝向自动形式化的通用框架
 
 自动形式化（autoformalization）已成为指代形式化自动化的术语——具体来说，是使用交互式定理证明器（证明助手）对数学进行形式化。其快速发展由深度学习的进展推动，尤其是大型语言模型（LLMs）。最近，该术语的含义已超出数学范畴，用来描述将非正式输入翻译为形式逻辑表示的更广泛任务。与此同时，越来越多的研究探索使用 LLMs 将非正式语言翻译为用于推理、规划和知识表示的形式表示——通常并不明确将这一过程称为自动形式化。因此，尽管处理的任务相似，这些研究领域在很大程度上的独立发展限制了共享方法论、基准和理论框架的机会，而这些本可加速进展。本文的目标是回顾——无论明示或暗示——可被视为自动形式化的实例，并提出一个统一框架，鼓励不同领域之间的交叉交流，以推动下一代人工智能系统的发展。
 发布：2025-09-11 19:28:56 协调世界时（UTC）
@@ -747,6 +747,18 @@ ProtoReasoning：原型作为 LLMs 可泛化推理的基础
  **Authors** : [Paul C. Bogdan](https://arxiv.org/search/?searchtype=author&query=Paul%20C.%20Bogdan), [Uzay Macar](https://arxiv.org/search/?searchtype=author&query=Uzay%20Macar), [Neel Nanda](https://arxiv.org/search/?searchtype=author&query=Neel%20Nanda), [Arthur Conmy](https://arxiv.org/search/?searchtype=author&query=Arthur%20Conmy)
 
 推理大型语言模型最近在许多领域都取得了最先进的性能。然而，他们的长篇思维链推理带来了可解释性挑战，因为每个生成的令牌都依赖于所有先前的令牌，这使得计算更难分解。我们认为，在句子层面分析推理轨迹是理解推理过程的一种很有前途的方法。我们提出了三种互补的归因方法：（1） 一种黑盒方法，通过比较 100 次推出的最终答案来衡量每个句子的反事实重要性，这些答案以生成该句子的模型或具有不同含义的模型为条件;（2） 一种白盒方法，在成对的句子之间聚合注意力模式，它识别出 “广播” 的句子，这些句子通过 “接收者” 的注意力头从所有未来的句子中受到不成比例的关注;（3） 因果归因方法，通过抑制对一个句子的关注并测量对每个未来句子的标记的影响来衡量句子之间的逻辑联系。每种方法都为思维锚的存在提供了证据，这些推理步骤具有极其重要性，并且不成比例地影响了随后的推理过程。这些思想锚通常是计划或回溯句子。我们提供了一个开源工具 （www.thought-anchors.com） 来可视化我们方法的输出，并提供了一个案例研究，展示了映射模型如何执行多步骤推理的方法的收敛模式。方法之间的一致性证明了句子级分析在更深入地理解推理模型方面的潜力。
+
+## 推理的不确定性
+
+###### [#77](https://arxiv.org/abs/2509.10739)[不确定性下的推理：探索法学硕士的概率推理能力](https://papers.cool/arxiv/2509.10739) [PDF] [Copy] [Kimi1] [REL]
+
+**Authors**: [Mobina Pournemat](https://arxiv.org/search/?searchtype=author&query=Mobina%20Pournemat), [Keivan Rezaei](https://arxiv.org/search/?searchtype=author&query=Keivan%20Rezaei), [Gaurang Sriramanan](https://arxiv.org/search/?searchtype=author&query=Gaurang%20Sriramanan), [Arman Zarei](https://arxiv.org/search/?searchtype=author&query=Arman%20Zarei), [Jiaxiang Fu](https://arxiv.org/search/?searchtype=author&query=Jiaxiang%20Fu), [Yang Wang](https://arxiv.org/search/?searchtype=author&query=Yang%20Wang), [Hamid Eghbalzadeh](https://arxiv.org/search/?searchtype=author&query=Hamid%20Eghbalzadeh), [Soheil Feizi](https://arxiv.org/search/?searchtype=author&query=Soheil%20Feizi)
+
+**尽管在语言理解和生成方面取得了广泛的成功，但大型语言模型 （LLM） 在面对需要概率推理的任务时表现出不明确且往往不一致的行为。在这项工作中，我们首次全面研究了法学硕士在显式离散概率分布上的推理能力。根据概率分布的观察结果，我们评估模型在三个精心设计的任务上，即模式识别、最大似然估计和样本生成，提示它们对有关联合分布或其条件的查询做出响应。因此，这些任务探索了一系列概率技能，包括频率分析、边缘化和生成行为。通过全面的实证评估，我们证明较小的模型和较大的模型之间存在明显的性能差距，后者在样本生成方面表现出更强的推理能力和令人惊讶的能力。此外，我们的调查揭示了显着的局限性，包括对用于表示概率结果的符号变化的敏感性，以及随着上下文长度的增加，性能下降超过 60%。总之，我们的结果提供了对法学硕士概率推理能力的详细理解，并确定了未来改进的关键方向。**
+
+**主题**: [计算和语言](https://papers.cool/arxiv/cs.CL)
+
+**发布**: 2025-09-12 22：58：05 UTC
 
 ## 其他推理
 
