--- a/content/topic/新模型.md
+++ b/content/topic/新模型.md
@@ -8,6 +8,12 @@ toc = true
 
 # 新模型
 
+###### [6.1B打平40B Dense模型，蚂蚁开源最新MoE模型Ling-flash-2.0](https://mp.weixin.qq.com/s/sWmYK-umJ9mvxx7hn4O6KA)
+
+2025-9-17
+
+
+
 ## 2025-09-15
 
 [Qwen3-Max-Preview （Instruct）](https://mp.weixin.qq.com/s/0NUx1Kokg5ueiDBd13te9g)
